# mITyGuitar

./: .gitignore  CHORD_MAPPING_FIX.md  CHORD_MAPPING_IMPLEMENTATION.md  Cargo.toml  GITHUB_RELEASES.md  IMPLEMENTATION_SUMMARY.md  MAPPING_WIZARD_STATUS.md  QUICKSTART.md  README.md  RELEASE.md  SOUNDFONT_INTEGRATION.md  ci-release.ps1  quick-release.bat  release.bat  release.ps1  run.ps1  start.bat  validate-songs.js
.github/instructions/: designKit.instructions.md  mITyGuitar.instructions.md
apps/desktop/: index.html  package-lock.json  package.json  package.json.backup
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  Cargo.toml.backup  ICONS.md  tauri.conf.json  tauri.conf.json.backup
apps/desktop/src-tauri/src/: commands.rs  main.rs  song_player.rs  state.rs
apps/desktop/src/components/: AboutDialog.tsx  AudioSettings.css  AudioSettings.tsx  ChordMappingControls.css  ChordMappingControls.tsx  DiagnosticsView.tsx  FretBoard.css  FretBoard.tsx  FretButton.css  FretButton.tsx  LiveView.tsx  MappingWizardView.tsx  MenuBar.tsx  ProfileManagerView.tsx  ProfileManagerView_backup.tsx  SongLibraryView.css  SongLibraryView.tsx  SongPlayView.css  SongPlayView.tsx  SongUploadDialog.tsx  (+4 more)
assets/chordmaps/: edm.json  folk.json  metal.json  pop.json  punk.json  rock.json
assets/songs/: Djo - End Of Beginning.json  Hurt - Johnny Cash.json  README.md  greensleeves.mitychart.json  simple-blues.mitychart.json
crates/audio/: Cargo.toml
crates/audio/src/: engine.rs  instant_callback.rs  lib.rs  soundfont.rs  synth.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/controller/: Cargo.toml
crates/controller/src/: high_performance.rs  lib.rs  lib_gilrs.rs  mapping_profile.rs  mapping_wizard.rs  raw_diagnostics.rs  simulator.rs  state.rs
crates/mapping/: Cargo.toml
crates/mapping/src/: chord.rs  genre.rs  harmonic.rs  lib.rs  performance.rs  presets.rs  resolution.rs
crates/song/: Cargo.toml
crates/song/src/: chart.rs  hit_detection.rs  instrument_resolver.rs  lib.rs  scoring.rs  transport.rs
docs/: ARCHITECTURE.md  BUILD.md  CONTROLLER_SETUP.md  README.md  SONG_FORMAT.md  SOUNDFONT_INTEGRATION.md
docs/images/: README.md
soundfont/: Palm Muted Guitar.sf2  Rock Basses.sf2
