[workspace]
members = [
    "crates/controller",
    "crates/mapping",
    "crates/audio",
    "crates/config",
    "crates/song",
    "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
# Shared dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.20"
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

# Audio
cpal = "0.15"
ringbuf = "0.4"
oxisynth = "0.1"

# HID
hidapi = { version = "2.6", features = ["linux-static-hidraw"] }

# Math/DSP
num-traits = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
