[package]
name = "mityguitar-desktop"
version = "0.1.2"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
once_cell.workspace = true
hidapi = "2.6"
dirs = "5.0"

# Local crates
controller = { path = "../../../crates/controller", features = ["simulator"] }
mapping = { path = "../../../crates/mapping" }
audio = { path = "../../../crates/audio", features = ["soundfont"] }
config = { path = "../../../crates/config" }
song = { path = "../../../crates/song" }

[features]
default = ["soundfont", "simulator"]
soundfont = ["audio/soundfont"]
simulator = []
